[gd_scene load_steps=34 format=3 uid="uid://6ngiuq2e3o7u"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_bcfl2"]
[ext_resource type="Script" path="res://scenes/leaf/leaf_highlight_handler.gd" id="2_74dy0"]
[ext_resource type="PackedScene" uid="uid://71lkn3s6kfqi" path="res://scenes/ui/shop/shop.tscn" id="2_cewtf"]
[ext_resource type="PackedScene" uid="uid://077fpjam3rlw" path="res://scenes/player/player.tscn" id="3_ncnfk"]
[ext_resource type="FontFile" uid="uid://b16ggo6tgg351" path="res://assets/font/Gabriela-Regular.ttf" id="3_uk65u"]
[ext_resource type="Material" uid="uid://dnl0j7w1x0eod" path="res://resource/mesh/leaf_material.tres" id="3_ys06x"]
[ext_resource type="Script" path="res://scenes/leaf/leaf_progress_tracker.gd" id="4_deeln"]
[ext_resource type="Script" path="res://scenes/leaf/leaf_particle_handler.gd" id="5_5xq02"]
[ext_resource type="PackedScene" uid="uid://dcaypqvm8j1yq" path="res://scenes/ui/hud/ui.tscn" id="5_is4j0"]
[ext_resource type="PackedScene" uid="uid://biun1d1hu4wq4" path="res://scenes/fx/leaf_particles.tscn" id="6_hdiec"]
[ext_resource type="PackedScene" uid="uid://d1lybxei6fkyd" path="res://scenes/fx/rain_particles.tscn" id="7_wptpp"]
[ext_resource type="Script" path="res://scenes/leaf/leaf_audio_handler.gd" id="8_8m8q3"]
[ext_resource type="Script" path="res://scenes/leaf/ranking_manager.gd" id="8_18ngi"]
[ext_resource type="Script" path="res://scenes/ui/ui_upscaler.gd" id="8_d3y8h"]
[ext_resource type="Texture2D" uid="uid://csspljpa4mobh" path="res://assets/texture/fx/texture_speed.png" id="10_0auwo"]
[ext_resource type="AudioStream" uid="uid://dl8wj1e1mcaaj" path="res://assets/audio/sfx_leaves_rustle_1.ogg" id="10_l2gfw"]
[ext_resource type="Script" path="res://scenes/fx/speed_effect.gd" id="11_e6qqw"]
[ext_resource type="Shader" path="res://shader/sun_flare.gdshader" id="12_ceytl"]
[ext_resource type="Script" path="res://scenes/player/tool/camera/camera_ui.gd" id="13_d2xbq"]
[ext_resource type="Texture2D" uid="uid://dck3bm0cescg6" path="res://assets/texture/ui/hud/texture_ui_camera.png" id="13_fykye"]
[ext_resource type="Texture2D" uid="uid://diwf3xbj3nljl" path="res://assets/texture/fx/texture_sun_flare.png" id="14_gpri0"]
[ext_resource type="Texture2D" uid="uid://cvtg8bskknog1" path="res://assets/texture/ui/hud/texture_ui_vignette.png" id="18_q3514"]
[ext_resource type="PackedScene" uid="uid://bvt1eg2hnqbmb" path="res://scenes/ui/ui_completion/ui_completion.tscn" id="20_rawhc"]
[ext_resource type="PackedScene" uid="uid://d0r5a5kwi5eoo" path="res://scenes/ui/pause_menu/pause_menu.tscn" id="22_yntas"]
[ext_resource type="Texture2D" uid="uid://dhgy85uah6kgp" path="res://assets/texture/fx/texture_sun_flare_1.png" id="25_5i5i2"]
[ext_resource type="Shader" path="res://shader/kuwahara_screen.gdshader" id="27_ktbah"]
[ext_resource type="Script" path="res://scenes/ui/blackout_layer.gd" id="31_te3wo"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e7rcr"]
blend_mode = 1
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_dvkjl"]
atlas = ExtResource("10_0auwo")
region = Rect2(0, 0, 320, 540)
margin = Rect2(0, 0, 0, -360)

[sub_resource type="Gradient" id="Gradient_7wx0o"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.0886263, 1)
colors = PackedColorArray(0.168627, 0.0745098, 0.0392157, 0, 0.168627, 0.0745098, 0.0392157, 1, 0.168627, 0.0745098, 0.0392157, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s5kpg"]
gradient = SubResource("Gradient_7wx0o")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5tcod"]
shader = ExtResource("27_ktbah")
shader_parameter/radius = 1
shader_parameter/offset = Vector3(0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2fb3w"]
shader = ExtResource("12_ceytl")
shader_parameter/Blur = 3.0
shader_parameter/FlareThreshold = 0.9
shader_parameter/Flares = 16
shader_parameter/FlareSpacing = 0.125
shader_parameter/Intensity = 1.0
shader_parameter/Saturation_ = 2.0
shader_parameter/FlareMult = ExtResource("25_5i5i2")
shader_parameter/FlareMult2 = ExtResource("14_gpri0")

[node name="Game" type="Node3D" node_paths=PackedStringArray("player", "ui_completion", "pause_menu", "shop_origin", "pausable", "progress_tracker", "particle_handler", "audio_handler", "ranking_manager", "rain_effect", "ui_layer")]
process_mode = 3
script = ExtResource("1_bcfl2")
player = NodePath("Pausable/Player")
ui_completion = NodePath("UILayer/UICompletion")
pause_menu = NodePath("UILayer/PauseMenu")
shop_menu_scene = ExtResource("2_cewtf")
shop_origin = NodePath("ShopLayer")
pausable = NodePath("Pausable")
progress_tracker = NodePath("LeafProgressTracker")
particle_handler = NodePath("LeafParticleHandler")
audio_handler = NodePath("LeafAudioHandler")
ranking_manager = NodePath("RankingManager")
rain_effect = NodePath("Pausable/Player/RainParticles")
ui_layer = NodePath("UILayer")

[node name="LeafHighlightHandler" type="Node" parent="."]
script = ExtResource("2_74dy0")
leaf_material = ExtResource("3_ys06x")
highlight_duration = 0.6
lerp_weight = 8.0

[node name="LeafProgressTracker" type="Node" parent="."]
script = ExtResource("4_deeln")
leeway = 250

[node name="LeafParticleHandler" type="Node" parent="."]
script = ExtResource("5_5xq02")
particles_scene = ExtResource("6_hdiec")

[node name="LeafAudioHandler" type="Node" parent="." node_paths=PackedStringArray("audio_player")]
script = ExtResource("8_8m8q3")
audio_player = NodePath("AudioStreamPlayer3D")
cooldown = 0.5

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="LeafAudioHandler"]
stream = ExtResource("10_l2gfw")
volume_db = -10.0
max_db = -10.0
bus = &"SFX"
attenuation_filter_cutoff_hz = 20500.0

[node name="RankingManager" type="Node" parent="."]
process_mode = 1
script = ExtResource("8_18ngi")

[node name="Pausable" type="Node" parent="."]
process_mode = 1

[node name="Player" parent="Pausable" instance=ExtResource("3_ncnfk")]
_block_input = true

[node name="RainParticles" parent="Pausable/Player" instance=ExtResource("7_wptpp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21.5, 0)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = -127

[node name="UI" parent="UILayer" instance=ExtResource("5_is4j0")]

[node name="UIUpscaler" type="Node" parent="UILayer/UI"]
script = ExtResource("8_d3y8h")

[node name="SpeedEffect" type="TextureRect" parent="UILayer" node_paths=PackedStringArray("player")]
material = SubResource("CanvasItemMaterial_e7rcr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_dvkjl")
script = ExtResource("11_e6qqw")
player = NodePath("../../Pausable/Player")
fps = 12.0
target_color = Color(0.29219, 0.29219, 0.29219, 1)

[node name="CameraUI" type="TextureRect" parent="UILayer" node_paths=PackedStringArray("label")]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("13_fykye")
script = ExtResource("13_d2xbq")
label = NodePath("TextureRect/Label")

[node name="UIUpscaler" type="Node" parent="UILayer/CameraUI"]
script = ExtResource("8_d3y8h")

[node name="TextureRect" type="TextureRect" parent="UILayer/CameraUI"]
self_modulate = Color(0.568627, 0.568627, 0.568627, 0.713726)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 86.0
offset_top = 483.0
offset_right = -952.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_s5kpg")

[node name="Label" type="RichTextLabel" parent="UILayer/CameraUI/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.764
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 13.0
offset_right = -13.888
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 16
theme_override_constants/line_separation = 8
theme_override_fonts/normal_font = ExtResource("3_uk65u")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Photo mode tooltip 1
Photo mode tooltip 2
Photo mode tooltip 3"
fit_content = true
scroll_active = false

[node name="UICompletion" parent="UILayer" instance=ExtResource("20_rawhc")]

[node name="PauseMenu" parent="UILayer" node_paths=PackedStringArray("submenu_origin") instance=ExtResource("22_yntas")]
mouse_filter = 2
submenu_origin = NodePath("../../SubmenuLayer")

[node name="ShopLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 102

[node name="SubmenuLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 100

[node name="BlackoutLayer" type="Control" parent="SubmenuLayer" node_paths=PackedStringArray("black_rect", "white_rect")]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("31_te3wo")
black_rect = NodePath("BlackRect")
white_rect = NodePath("WhiteRect")

[node name="BlackRect" type="ColorRect" parent="SubmenuLayer/BlackoutLayer"]
modulate = Color(1, 1, 1, 0)
z_index = 4096
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="WhiteRect" type="ColorRect" parent="SubmenuLayer/BlackoutLayer"]
modulate = Color(1, 1, 1, 0)
z_index = 4096
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PostProcess" type="CanvasLayer" parent="."]
layer = -128

[node name="Kuwahara" type="ColorRect" parent="PostProcess"]
material = SubResource("ShaderMaterial_5tcod")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 2

[node name="SunFlare" type="ColorRect" parent="PostProcess"]
material = SubResource("ShaderMaterial_2fb3w")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Vignette" type="TextureRect" parent="PostProcess"]
modulate = Color(1, 1, 1, 0.556863)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("18_q3514")
